[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.3",
    "streamlit-folium>=0.24.0",
    "streamlit>=1.44.0",
    "folium>=0.19.5",
    "psycopg2-binary>=2.9.10",
    "twilio>=9.5.1",
    "numpy>=2.2.4",
    "plotly>=6.0.1",
]
